# django-encrypted-fields

./: Makefile  pyproject.toml
django_encrypted_fields/: apps.py  models.py
django_encrypted_fields/management/commands/: generate_fernet_key.py
