[tool.poetry]
name = "django_encrypted_fields"
version = "0.1.0"
description = ""
authors = ["Rashad Ansari <rashad.ansari1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.0.5"
cryptography = "^43.0.1"

[tool.poetry.dev-dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I001"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
